--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,6 +27,7 @@
           </div>
 
           <nav>
+            <a href="{{ site.baseurl }}/outline">Outline</a>
             <a href="{{ site.baseurl }}/lessons">Lessons</a>
             <a href="{{ site.baseurl }}/about">About</a>
           </nav>
